@@ -36,11 +36,12 @@
   {foreach name = 'users_list' key = 'key' item = 'user' from = $T_DATA_SOURCE}
   <tr id="row_{$user.login}" class = "{cycle values = "oddRowColor, evenRowColor"} {if !$user.active}deactivatedTableElement{/if}">
    <td id="column_{$user.login}">
-    {if $user.active == 1}
-     <a href = "{$smarty.session.s_type}.php?ctg=users&edit_user={$user.login}" class = "editLink">#filter:login-{$user.login}#</a>
-    {else}
+    {*<a href = "{$smarty.session.s_type}.php?ctg=users&edit_user={$user.login}" class = "editLink">#filter:login-{$user.login}#</a>*}
+    <a href = "{$smarty.server.PHP_SELF}?ctg=users&edit_user={$user.login}" class = "{if $user.active == 1}editLink{/if} info" onmouseover = "updateInformation(this, '{$user.login}', 'user');">
      #filter:login-{$user.login}#
-    {/if}
+     <img class = "tooltip" border = "0" src = "images/others/tooltip_arrow.gif" height = "15" width = "15"/>
+     <span class = "tooltipSpan"></span>
+    </a>
    </td>
    <td>{$T_LANGUAGES[$user.languages_NAME]}</td>
    <td>#filter:timestamp-{$user.timestamp}#</td>
